src/tests/data/TypeErrors/NegateInt.c

#include <stdio.h>

int main()
{
	if (!10) {}     // ERROR
	return 0;
}